--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -9,3 +9,15 @@ body {
     margin-inline-start: auto;
     margin-inline-end: auto;
 }
+
+
+input[type=checkbox]:checked + body {
+    background-color: rgba(145, 148, 144, 0.5);
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+    right: 0;
+}
