--- a/scss/_what_they_said.scss
+++ b/scss/_what_they_said.scss
@@ -9,6 +9,12 @@
 }
 
 
+.manage__what__bigtitle {
+    text-align: center;
+    margin-top: calc(#{$margin-top} * 2);
+}
+
+
 
 .container__slide {
     overflow: hidden;
@@ -137,7 +143,7 @@
 }
 
 
-// .manage__what__paragraph {
-//     padding: 2rem;
-// }
+
+
+
 
