--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -199,6 +199,7 @@ input[type=checkbox]:checked ~ .curtain {
       font-family: Bahnschrift;
       font-weight: 700;
       line-height: 45px;
+      color: rgb(3, 3, 117);
       
     }
 
